deployments/homeassistant/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      volumes:
        - name: homeassistant-data
          persistentVolumeClaim:
            claimName: homeassistant-pvc-data
        - name: ttyacm
          hostPath:
            path: /dev/ttyACM0
      containers:
        - image: docker.io/homeassistant/home-assistant:stable
          name: homeassistant
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: homeassistant-data
            - mountPath: /dev/ttyACM0
              name: ttyacm
          securityContext:
            privileged: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_RAW"]
          resources: {}
      terminationGracePeriodSeconds: 60
