deployments/homeassistant/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - name: ha-web
      protocol: TCP
      port: 8123
      targetPort: 8123
