deployments/homeassistant/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: homeassistant
  namespace: homeassistant
spec:
  rules:
    - host: ha.imagilan
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant-service
                port:
                  name: ha-web
